# Collection-of-HACK

./: README.md  TCP and UDP ports used by Apple software products - Apple Support.html  hans
NetgearTelnetEnable-master/: README  telnetenable  telnetenable-win.c  telnetenable.c
Nuclear Reset 2/: enable_failsafe_boot.sh
Nuclear Reset 2/Original Script/: configure_flash.sh
TCP and UDP ports used by Apple software products - Apple Support_files/: ACHistory.js  ACTruncate.js  ACUtil.js  KmLoader.js  ac-globalfooter.built.css  ac-globalnav.built.css  ac_cds_retina.js  accs-offer.css  accsoffer.js  cds_article.css  cds_article.js  index  labelwrap.js
aircrack-ng-1.2-rc5/: Makefile.in  aclocal.m4  config.status  configure  libtool
aircrack-ng-1.2-rc5/autom4te.cache/: output.0  requests  traces.0  traces.1
aircrack-ng-1.2-rc5/manpages/: Makefile.in
aircrack-ng-1.2-rc5/scripts/: Makefile.in
aircrack-ng-1.2-rc5/src/: Makefile.in
aircrack-ng-1.2-rc5/test/: Makefile.in
iaxclient-2.1beta3/: Makefile.in  aclocal.m4  config.h.in  configure
iaxclient-2.1beta3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
iaxclient-2.1beta3/lib/: Makefile.in
iaxclient-2.1beta3/simpleclient/: Makefile.in
iw-3.7-Linux-porting-master/: 1_build_iw.sh  2_build.sh  Makefile  README  iw  version.c
iwar-0.071/: Makefile  config.h  config.status  iwar  iwar-blacklist.txt
iwar-0.071/.deps/: iwar-engine.Po  iwar-iax2.Po  iwar-ncurses.Po  sysdep1.Po
iwidarwin-master/: README.md
iwsniff-master/: Makefile  ReadMe.txt  asn1.c  asn1.h  base64.c  base64.h  buf.c  buf.h  capture.c  capture.h  daemon.c  decode.c  decode.h  decode_aim.c  decode_citrix.c  decode_cvs.c  decode_ftp.c  decode_hex.c  decode_http.c  decode_icq.c  decode_imap.c  decode_irc.c  decode_ldap.c  decode_mmxp.c  decode_mountd.c  decode_napster.c  decode_nntp.c  decode_oracle.c  decode_ospf.c  decode_pcanywhere.c  decode_pop.c  decode_postgresql.c  decode_pptp.c  decode_rip.c  decode_rlogin.c  decode_smb.c  decode_smtp.c  decode_sniffer.c  decode_snmp.c  decode_socks.c  (+22 more)
libffi-2.99.9/: Makefile  config.status  fficonfig.h  libffi.la  libffi.pc  libtool
libffi-2.99.9/.libs/: libffi.5.0.1.dylib  libffi.dylib  libffi.lai
libffi-2.99.9/include/: Makefile  ffi.h
libffi-2.99.9/man/: Makefile
libffi-2.99.9/src/: closures.lo  debug.lo  java_raw_api.lo  prep_cif.lo  raw_api.lo  types.lo
libffi-2.99.9/testsuite/: Makefile
libnl-3.2.25/: config.status  libtool
libnl-iw-android-master/: Makefile.in  config.status  configure  libtool
libnl-iw-android-master/android_toolchain/: build.sh
libnl-iw-android-master/doc/: Makefile.in
libnl-iw-android-master/include/: Makefile.in
libnl-iw-android-master/lib/: Makefile.in  defs.h  defs.h.in
libnl-iw-android-master/man/: Makefile.in
libnl-iw-android-master/python/: Makefile.in
libvidcap-0.2.1/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.status  configure  configure.ac  libtool  vidcap.pc.in
libvidcap-0.2.1/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
libvidcap-0.2.1/contrib/win/vs2005/: libvidcap.sln  libvidcap.vcproj
libvidcap-0.2.1/examples/: Makefile.am  Makefile.in  simplegrab.c
libvidcap-0.2.1/examples/vidcapTester/: Grabber.cpp  Grabber.h  GrabberManager.cpp  GrabberManager.h  MainWindow.cpp  MainWindow.h  SigHandler.cpp  SigHandler.h  VideoWidget.cpp  VideoWidget.h  resources.qrc  vidcapTester.cpp  vidcapTester.pro
libvidcap-0.2.1/include/: Makefile.am  Makefile.in
libvidcap-0.2.1/include/vidcap/: Makefile.am  Makefile.in
libvidcap-0.2.1/src/: Makefile.am  Makefile.in  conv.c  conv.h  conv_to_i420.c  conv_to_rgb.c  conv_to_yuy2.c  double_buffer.c  double_buffer.h  hotlist.c  hotlist.h  logging.c  logging.h  os_funcs.h  sapi.c  sapi.h  sapi_context.h  sapi_dshow.cpp  sapi_qt.c  sapi_v4l.c  sliding_window.c  sliding_window.h  vidcap.c
libvidcap-0.2.1/src/directshow/: DShowSrcManager.cpp  DShowSrcManager.h  DevMonitor.cpp  DevMonitor.h  DirectShowObject.cpp  DirectShowObject.h  DirectShowSource.cpp  DirectShowSource.h  GraphMonitor.cpp  GraphMonitor.h  SourceStateMachine.cpp  SourceStateMachine.h
libvidcap-0.2.1/src/quicktime/: gworld.c  gworld.h  sg_manager.c  sg_manager.h  sg_source.c  sg_source.h
node-wireless-osx-master/: package-lock.json  package.json
nte-05/: Makefile  README  README._orig  blowfish.h  descrip.mms  md5.c  nte  nte.c  telnetenable-win.c  telnetenable.c  vms.c  win32.c  zip-comment.txt
wifi-probe-master/: start.sh  wifi-probe.py
wireless-tools-gnumach-master/: ChangeLog  Makefile.am  README  configure.ac
wireless-tools-gnumach-master/src/: .cvsignore  Makefile.am  iwconfig.c  iwlib.c  wireless.h
wireless-tools-master 2/: iwconfig  package-lock.json  package.json
(+44 files in other folders)
